# poeserver

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  heroku.yml
apps/django-polls/: pyproject.toml
apps/django-polls/polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/django-polls/polls/migrations/: 0001_initial.py
apps/django-polls/polls/templates/polls/: detail.html  index.html
apps/django-upload-2/: pyproject.toml
apps/django-upload-2/upload/: models.py
apps/django-upload-2/upload/migrations/: 0002_auto_20200207_1439.py  0002_auto_20210427_0155.py
image/: .coverage  Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  heroku_envs.py  manage.py  pyproject.toml
image/app/: Dockerfile  Dockerfile.dev  Dockerfile.prod  deployment-tasks.sh  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  tests.py
image/app/data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
image/app/data/db/pg_stat/: db_0.stat  db_13754.stat  db_16384.stat  global.stat
image/app/data/db/pg_xact/: 0000
image/app/server/: settings.py  storage_backends.py  urls.py
image/app/staticfiles/: staticfiles.json
image/app/staticfiles/admin/css/: base.css
image/app/staticfiles/polls/: style.f0d1dc84f232.css
image/app/templates/admin/: base_site.html
image/app/tests/static/: tests.py
image/app/wheels/: django_polls-0.1.0-py3-none-any.whl  django_upload-0.1.0-py3-none-any.whl  django_upload-0.2.0-py3-none-any.whl
image/data/db/base/13754/: pg_internal.init
image/data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
image/data/db/pg_stat/: db_0.stat  db_13754.stat  db_13757.stat  db_16384.stat  global.stat
image/data/db/pg_subtrans/: 0000
image/data/db/pg_xact/: 0000
image/nginx/: nginx.conf
image/server/: asgi.py  settings.py  urls.py  wsgi.py
(+162 files in other folders)
