[tool.poetry]
name = "django-upload"
version = "0.2.0"
description = ""
authors = ["jsalaz1989 <jsalaz1989@gmail.com>"]
packages = [
    { include = "upload" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
