[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["jsalaz1989 <jsalaz1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.0,<4.0"
psycopg2-binary = ">=2.8"
coverage = ">=6.1.2"
django-polls = { path = "wheels/django_polls-0.1.0-py3-none-any.whl" }
django-upload = { path = "wheels/django_upload-0.2.0-py3-none-any.whl" }
gunicorn = "20.1.0"
whitenoise = "5.3.0"
django-storages = "1.12.2"
boto3 = "1.20.17"
selenium = "4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
